--- a/08-HTML/homework/styles.css
+++ b/08-HTML/homework/styles.css
@@ -1,6 +1,18 @@
-h1{
+/* homework */
+body{
+    background-image: url(/08-HTML/img/thumb-1920-317664.jpg);
+    
+}
+div{
+    position: relative;
+    margin: 0 auto;
+    text-align: center;
+    
+}
+h1{ 
     color: blue;}
-img { width: 400px;}
+img { 
+    width: 400px;}
 #thirdDiv{
     width: 500px; height: 200px;
     background-color: cornflowerblue;
@@ -13,4 +25,7 @@ img { width: 400px;}
 #spanId {
     font-size: 18px; 
     margin: 50px;
+}
+
+
 }
