--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -6,7 +6,8 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 /* Ejercicio 1: Centrar el texto en un span */
 
 /* Arrancaremos este ejercicio por vos: */
-#ejercicioUno {
+#ejercicioUno {display: block;
+    text-align: center;
 
 }
 
@@ -14,25 +15,69 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
+#ejercicioDos {
+    display: none;
+}
 
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
+#ejercicioTres {
+    position: relative;
+    left: 200px; top: 100px;
+}
 
 
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
+#ejercicioCuatro {
+    position: fixed;
+    top:0px; left: 0px;
+}
 
 
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
+#ejercicioCinco {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 
 
 
 /* Ejercicio 6. */
+#ejercicioCinco{
+    flex-direction: row-reverse;
+
+}
+
+/*  Ejercicio 7 */
+#ejercicioSiete{
+position: flex;  
+align-items:center;
+flex-direction: column-reverse;
+}
+#elementoUno{
+   align-self: flex-start;
+   order: 1;
+}
+#elementoCuatro {
+    align-self: flex-end;
+    
+}
+#elementoTres {
+    align-self: flex-start;
+    order: -1;
+}
+#elementoDos {
+   align-self: flex-end;
+   
+}
+
